@@ -54,7 +54,7 @@ COMPILE =  -f batch-byte-compile
 
 #The various modules:
 DTK_OBJECTS = acss-structure.elc \
-dtk-speak.elc		dtk-voices.elc\
+dtk-speak.elc		dectalk-voices.elc\
 outloud-voices.elc  \
 dtk-interp.elc		
 
@@ -250,7 +250,7 @@ cus-load.el:
 dtk-interp.elc: dtk-interp.el
 dtk-speak.elc: dtk-speak.el  dtk-interp.elc
 acss-structure.elc: acss-structure.el
-dtk-voices.elc: dtk-voices.el voice-setup.elc
+dectalk-voices.elc: dectalk-voices.el voice-setup.elc
 outloud-voices.elc: outloud-voices.el voice-setup.elc
 voice-setup.elc: voice-setup.el acss-structure.elc
 html-outline.elc: html-outline.el
